turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: type mismatch;
 found   : Int
 required: java.awt.Color
	setCouleurSol(rule(state)(couleur)(COULEUR_SUIVANTE));
                                          ^